--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "flask>=3.1.2",
+    "flask-wtf>=1.2.2",
     "python-dotenv>=1.2.1",
 ]
